syntax = "proto3";
package genproto;

option go_package = "genproto/setting_service";

message CategoryCreatedResponse {
    string id = 1;
}
message CategoryGetReq {
    string id = 1;
}
message Category {
    string id = 1;
    string ru_name = 2;
    string name = 3;
    uint32 soato = 4;
    uint32 code = 5;
}
message GetAllCategoriesRequest {
    string name = 1;
    uint32 soato = 2;
    uint32 page = 3;
    uint32 limit = 4;
}
message GetAllCategoriesResponse {
    uint32 count = 1;
    repeated Category categories = 2;
}
message CCExistsRequest {
    string id = 1;
}

message CCExistsResponse {
    bool exist = 1;
}

message GetCategoryByCodeRequest {
    int64 code = 1;
}